feat: implemented almost everything
