# src/main/java/com/bmw/maintenance/domain/ScannerType.java
@@ -1,0 +1,5 @@
+package com.bmw.maintenance.domain;
+
+public enum ScannerType {
+    BASIC, ADVANCED
+}
